--- a/angular/iReportUI/src/app/app.component.html
+++ b/angular/iReportUI/src/app/app.component.html
@@ -1,5 +1,7 @@
 <div>
-  <span>
-    kiskutya
+  <span >
+    "{{report}}"
   </span>
+  <br>
+    <button (click) ="onSubmit()"  >SUBMIT</button>
 </div>
